syntax = "proto3";
option go_package = "github.com/0x00b/gobbq/proto/sys;sys";
package sys;

// for options
import "google/protobuf/descriptor.proto";


message WatchRequest{
	uint64 EntityID = 1;
}

message WatchResponse{
}
 
service Sys {
	rpc Watch(WatchRequest) returns(WatchResponse) {}
	rpc Unwatch(WatchRequest) returns(WatchResponse) {}
	rpc Notify(WatchRequest) returns(WatchResponse) {}
}
